--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,8 @@
 shared-workspace-lockfile=false
+hoist-pattern[]=*eslint*
+hoist-pattern[]=*babel*
+hoist-pattern[]=*jest*
+hoist-pattern[]=@emotion/*
+hoist-pattern[]=postcss
+hoist-pattern[]=pug
+hoist-pattern[]=source-map-support
